about.css
/* CSS reset: */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* set box-sizing for whole page:  */

html {
  box-sizing: border-box;
}

/* NAVIGATION STYLING----------------------------------------------------------------------------------------------------------------- */

body,
html {
  font-family: "Source Sans Pro", sans-serif;
  height: 100%;
}

nav {
  display: flex;
  justify-content: space-between;
  background: #35373b;
  color: white;
  position: sticky;
  top: 0;
  padding: 0.25em 1em 0.25em 1em;
}

.navbar-left {
  display: flex;
  align-items: center;
}

.logo {
  width: 70%;
  height: 70%;
}

.nav-title {
  padding-left: 1em;
  font-weight: bold;
}

.navbar-right {
  display: flex;
  align-items: center;
}

.nav-link {
  padding-left: 1em;
  text-decoration: none;
  color: white;
}

.nav-link:hover {
  color: #ff5b7b;
}

/* MAIN STYLING -------------------------------------------------------------------------------------------------------------------- */

.about-main {
  height: 100vh;
  background: rgb(245, 245, 245);
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: black;
  padding-bottom: 5em;
}

.main-heading {
  font-size: 3rem;
  padding-top: 1em;
  padding-bottom: 0.5em;
}

.main-subheading {
  font-size: 1.5rem;
  padding-bottom: 1.5em;
  width: 80%;
}

h4 a {
  text-decoration: none;
  color: black;
}

h4 i {
  color: #ff5b7b;
}

h4 a:hover {
  color: #bc3534;
}

/* CARDS SECTION STYLING ------------------------------------------------------------------------------------------------------------ */

.cards-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: white;
  width: 15%;
  padding: 2em 0 2em 0;
  border-radius: 0.5em;
  margin: 1em;
}

.card:hover {
  transform: scale(1.02);
}

.image-container {
  width: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-bottom: 1em;
}

.card-image {
  height: 100%;
  width: 100%;
  border-radius: 100%;
}

.card h4 {
  font-size: 1.25rem;
  padding-bottom: 0.5em;
}

/* main media query: -----------------------------------------------------------------------------------------------------------------*/

@media only screen and (max-width: 750px) {
  .about-main {
    height: 100%;
  }
  .card {
    width: 70%;
    margin: 1em;
  }
}

/* FOOTER STYLING --------------------------------------------------------------------------------------------------------------------- */

footer {
  background: #35373b;
  display: flex;
  justify-content: space-between;
}

.copyright-container {
  display: flex;
  align-items: center;
  text-align: center;
  color: white;
  padding-left: 0.5em;
}

.socials-container {
  display: flex;
  align-items: center;
  color: white;
  padding: 0.5em 1em 0.5em 1em;
}

.socials-container i:hover {
  color: #ff5b7b;
}

